--- a/src/css/2-layout/main.css
+++ b/src/css/2-layout/main.css
@@ -1,5 +1,5 @@
 :root {
-  --max-inline-size : 90vw;
+  --max-inline-size : 95vw;
   --flex-wrap:wrap;
   --horizontal-alignment:space-evenly;
   --column-gap:0;
@@ -7,14 +7,41 @@
 }
 
 figure {
-  flex: 1 1 720px;
+  flex: 0 1 640px;
+}
+
+article {
+  --margin-block-start: var(--step-4);
+}
+
+article h2 {
+  font-size: var(--step-4);
+  --measure:13ch;
+  line-height: 1;
+}
+
+article  p {
+  --measure:37ch;
+}
+
+article strong {
+  font-size: var(--step-1);
+  line-height: 1;
 }
 
 section.text {
-  block-size: 50vh;
-  background-image: url("../../assets/images/MARKETING.png");
+  block-size: 65vh;
+  background-image: url("../../assets/images/DSC08395.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  --vertical-alignment:center
+}
+
+section.text span {
+  color : white;
+  font-weight: var(--fw-bold);
+  font-size: var(--step-4);
+  text-align: center;
 }
 
